Revision history for Perl module Handel

0.33 Mon Jun 19 19:31:23 2006
    - Fixed version requirement for catalyst tests
    - Fixed cart iterator tests db file creation issues
    - Cart taglib now calls tag-based functions to ease subclassing
    - Applied Catalyst Controller Helper patch from Todd W. for Catalyst 5.6+

0.32 Sun Jan 22 18:19:38 2006
    - Added order_reconcile.t tests
    - Order::reconcile now uses copy_cart/copy_cart_items

0.31 Tue Jan 17 19:43:14 2006
    - Fixed order creation from cart uuid to use cart_class
    - Fixed order reconcile to use cart_class
    - Added ccissuenumber, ccstartdate and ccenddate temp fieds to orders
    - Use version to property compare CDBI versions (3.0.1 doesn't use version)
    - Added clear_messages to Handel::Checkout
    - Checkout plugin handlers are now run in the order of their declared
        preference number
    - Fixed Carts item_class to return a default
    - Fixed Carts items(), delete(), destroy() and restore() to use item_class
    - Fixed Orders item_class to return a default
    - Fixed Orders items(), delete() to use item_class
    - PRAGMA synchronous = OFF and temp_store = MEMORY for SQLite tests to
        reduce disk trashing during testing
    - Handel::Exception::Taglib subclasses Apache::AxKit::Exception if available
        to play nice with AxKits exception handling
    - Added destroy() to Handel::Order
    - Added subclassing tests to current cart/order/checkout tests
    - Checkout::process now clears the stash before the call to plugin init, so
	plugins can set stash data
    - Added Handel::Checkout::Stash to checkout process
    - Added Checkout->stash_class to allow the use of a custom stash class in
        Checkout subclasses
    - Checkout::new how takes the stash option, which should contain a instance
	of a Handel::Checkout::Stash subclass
    - Added t/checkout_stash,t tests
    - Class setter methods (order_class, item_class, stash_class, cart_class)