@@ -575,7 +575,7 @@ use Test::More tests => 2;
 use strict;
 use warnings;
 
-use_ok(Catalyst::Test, '[% app %]');
+use_ok('Catalyst::Test', '[% app %]');
 use_ok('[% class %]');
 __view__
 [% TAGS [- -] %]
